syntax = "proto3";

import "grpc/registry/v1alpha1/rules.proto";

option java_package = "io.anemos.metastore.v1alpha1";
option java_multiple_files = true;

package grpc.registry.v1alpha1;

message Report {
    Patch patch = 1;
    ResultCount result_count = 2;
}

message ResultCount {
    int32 lint_errors = 1;
    int32 lint_warnings = 2;
    int32 lint_infos = 3;
    int32 diff_errors = 4;
    int32 diff_warnings = 5;
    int32 diff_infos = 6;

    repeated ErrorInfo error_info = 7;
}

message Patch {
    map<string, FilePatch> file_patches = 1;
    map<string, MessagePatch> message_patches = 2;
    map<string, EnumPatch> enum_patches = 3;
    map<string, ServicePatch> service_patches = 4;
}

message ErrorInfo {
    enum ErrorType {
        ERROR = 0;
        WARNING = 1;
        INFO = 2;
    }
    ErrorType type = 1;
    oneof path {
        string message = 3;
        string field = 4;
        string enum = 5;
        string enum_value = 6;
        string service = 7;
        string method = 8;
    }
    string code = 9;
    string description = 10;
}

enum ChangeType {
    UNCHANGED = 0;
    CHANGED = 1;
    ADDITION = 2;
    REMOVAL = 3;
    RESERVED = 4;
    UNRESERVED = 5;
    DEPRECATED = 6;
    REINSTATED = 7;
    PAYLOAD_CHANGED = 8;
}

enum TypeChange {
    TYPE_UNCHANGED = 0;
    TYPE_SAFE = 1;
    TYPE_LOOSE_INFO = 2;
}

message LintRuleInfo {
    LintRule lint_rule = 1;
    string code = 2;
}

// Generic ChangeInfo message menth for top level objects like File, Message,
// Enum and Service. As the don't contain any time information and are
// actually containers they only support addition, renames and removals.
message ChangeInfo {
    string from_name = 1;
    string to_name = 2;
    ChangeType change_type = 3;
}

message ImportChangeInfo {
    ChangeType change_type = 1;
    string name = 2;
}

message FilePatch {
    string file_name = 1;
    repeated string message_result_ref = 2;

    repeated LintRuleInfo info = 3;

    ChangeInfo change = 4;

    repeated ImportChangeInfo import_change = 9;
    repeated OptionChangeInfo option_change = 10;
}

message MessagePatch {
    string package = 1;
    string name = 2;

    repeated LintRuleInfo info = 3;

    ChangeInfo change = 4;


    repeated FieldPatch field_patches = 5;

    repeated OptionChangeInfo option_change = 10;
}

message FieldPatch {
    int32 number = 1;
    string name = 2;

    repeated LintRuleInfo info = 3;

    FieldChangeInfo change = 4;

    repeated OptionChangeInfo option_change = 10;
}

message OptionChangeInfo {
    enum OptionType {
        OPTION_TYPE_UNSET = 0;
        FILE_OPTION = 1;
        MESSAGE_OPTION = 2;
        FIELD_OPTION = 3;
        ENUM_OPTION = 4;
        ENUM_VALUE_OPTION = 5;
        SERVICE_OPTION = 6;
        METHOD_OPTION = 7;
    }

    ChangeType change_type = 1;
    OptionType type = 2;

    bytes payload_old = 5;
    bytes payload_new = 6;

    int32 option_number = 7;
    string option_name = 8;
}

message FieldChangeInfo {
    enum FieldType {
        FIELD_TYPE_UNSET = 0;
        FIELD_TYPE_DOUBLE = 1;
        FIELD_TYPE_FLOAT = 2;
        FIELD_TYPE_INT64 = 3;
        FIELD_TYPE_UINT64 = 4;
        FIELD_TYPE_INT32 = 5;
        FIELD_TYPE_FIXED64 = 6;
        FIELD_TYPE_FIXED32 = 7;
        FIELD_TYPE_BOOL = 8;
        FIELD_TYPE_STRING = 9;
        FIELD_TYPE_MESSAGE = 11;
        FIELD_TYPE_BYTES = 12;
        FIELD_TYPE_UINT32 = 13;
        FIELD_TYPE_ENUM = 14;
        FIELD_TYPE_SFIXED32 = 15;
        FIELD_TYPE_SFIXED64 = 16;
        FIELD_TYPE_SINT32 = 17;
        FIELD_TYPE_SINT64 = 18;
    };

    ChangeType change_type = 1;

    string from_name = 2;
    FieldType from_type = 3;
    bool from_deprecated = 4;
    bool from_reserved = 5;

    string to_name = 6;
    FieldType to_type = 7;
    bool to_deprecated = 8;
    bool to_reserved = 9;
}

message EnumValueChangeInfo {
    ChangeType change_type = 1;

    string from_name = 2;
    bool from_deprecated = 4;
    bool from_reserved = 5;

    string to_name = 6;
    bool to_deprecated = 8;
    bool to_reserved = 9;
}

message MethodChangeInfo {
    ChangeType change_type = 1;

    string from_name = 2;
    bool from_deprecated = 4;

    string to_name = 6;
    bool to_deprecated = 8;
}


message ServicePatch {
    string package = 1;
    string name = 2;

    repeated LintRuleInfo info = 3;

    ChangeInfo change = 4;

    repeated MethodPatch method_patches = 5;
}

message MethodPatch {
    string name = 2;

    repeated LintRuleInfo info = 3;

    MethodChangeInfo change = 4;
}

message EnumPatch {
    string package = 1;
    string name = 2;

    repeated LintRuleInfo info = 3;

    ChangeInfo change = 4;

    repeated EnumValuePatch value_results = 5;
}

message EnumValuePatch {
    int32 number = 1;
    string name = 2;

    repeated LintRuleInfo info = 3;

    EnumValueChangeInfo change = 4;
}
